--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,22 @@
           </execution>
         </executions>
       </plugin>
+      <!-- runing with just compile -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <executions>
+        <execution>
+        <goals>
+          <goal>java</goal>
+        </goals>
+        </execution>
+        </executions>
+        <configuration>
+          <mainClass>com.webgame.camelup.server.Server</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
